# esp-opentelemetry-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md  idf_component.yml
.devcontainer/: Dockerfile  devcontainer.json  install-claude.sh  install-gh.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml
cmake/: FindCURL.cmake  ProtobufConfig.cmake.in  protobuf_setup.cmake
cmake/host_build/: CMakeLists.txt
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic/main/: main.cpp
examples/batch/: CMakeLists.txt  README.md
examples/batch/main/: Kconfig.projbuild
examples/metrics/ostream/: CMakeLists.txt  sdkconfig.defaults  test_qemu.sh
examples/metrics/ostream/main/: CMakeLists.txt  main.cpp
examples/metrics/otlp/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/metrics/otlp/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
examples/ostream/: CMakeLists.txt  sdkconfig.defaults
examples/profiling/otlp/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/profiling/otlp/main/: Kconfig.projbuild  main.cpp
examples/profiling/serial/: CMakeLists.txt  README.md  sdkconfig.defaults  test_qemu.sh
examples/profiling/serial/main/: CMakeLists.txt  main.cpp
examples/propagation/: CMakeLists.txt  sdkconfig.defaults
examples/propagation/main/: Kconfig.projbuild  main.cpp
examples/simple/: CMakeLists.txt  README.md  test_qemu.sh
examples/simple/main/: main.cpp
examples/tracing/batch/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/tracing/batch/main/: CMakeLists.txt  main.cpp
examples/tracing/ostream/: CMakeLists.txt  README.md  test_qemu.sh
examples/tracing/ostream/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
examples/tracing/propagation/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/tracing/propagation/main/: CMakeLists.txt  main.cpp
include/: esp_http_client_transport.hpp  esp_metrics.hpp  esp_opentelemetry.hpp  esp_profiling.hpp  esp_tracing.hpp
shims/: absl_encode_varint_bool_fix.h  time.h
shims/sys/: mman.h
src/: esp_http_client_transport.cpp  esp_opentelemetry.cpp  esp_posix_shims.c  propagation.cpp  propagation.hpp
src/integration/: esp_export_thread.hpp  esp_http_client_transport.cpp  esp_http_client_transport.hpp  esp_metrics.cpp  esp_opentelemetry.cpp  esp_profiles_exporter.cpp  esp_profiling.cpp  esp_profiling_stub.cpp  esp_task_span_slot.cpp  esp_task_span_slot.hpp  esp_tracing.cpp
src/workarounds/: absl_varint_bool.h  esp_heap_align.cpp  otlp_http_exporter_esp.cc  posix_shims.c  time.h
src/workarounds/absl_shadow/absl/base/internal/: thread_identity.h
src/workarounds/sys/: mman.h
test/heap_align_idf/: CMakeLists.txt  sdkconfig.defaults
test/heap_align_idf/main/: main.cpp
test/heap_align_protobuf/: CMakeLists.txt  sdkconfig.defaults
test/heap_align_protobuf/main/: CMakeLists.txt  main.cpp
tools/symbolizer/: Dockerfile  README.md
tools/symbolizer/src/symbolizer/: __init__.py  __main__.py  symbolizer.py
tools/symbolizer/tests/unit/: test_symbolizer.py
