# Superproject that builds a host-native protoc (and its protobuf/abseil
# dependencies) from the exact source trees vendored under
# third_party/. The resulting protoc is used by opentelemetry-cpp to
# generate .pb.cc sources during the target (Xtensa) build — version
# must match the target libprotobuf bit-for-bit.
#
# This file is consumed through cmake/protobuf_setup.cmake's
# execute_process() call, not directly by ESP-IDF. CMake/toolchain vars
# here are explicitly the host's, not Xtensa's.

cmake_minimum_required(VERSION 3.22)

project(esp_opentelemetry_host_protobuf CXX C)

if(NOT DEFINED ABSL_SRC OR NOT DEFINED PROTOBUF_SRC)
    message(FATAL_ERROR "ABSL_SRC and PROTOBUF_SRC must be provided")
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# --- Abseil ------------------------------------------------------------------
set(ABSL_PROPAGATE_CXX_STD       ON  CACHE BOOL   "" FORCE)
set(ABSL_ENABLE_INSTALL          ON  CACHE BOOL   "" FORCE)
set(ABSL_BUILD_TESTING           OFF CACHE BOOL   "" FORCE)
set(ABSL_USE_EXTERNAL_GOOGLETEST OFF CACHE BOOL   "" FORCE)
add_subdirectory(${ABSL_SRC} abseil-cpp-build)

# --- Protobuf (host build: just enough to produce protoc) --------------------
set(protobuf_BUILD_TESTS         OFF CACHE BOOL "" FORCE)
set(protobuf_BUILD_EXAMPLES      OFF CACHE BOOL "" FORCE)
set(protobuf_BUILD_CONFORMANCE   OFF CACHE BOOL "" FORCE)
# libprotoc's Rust code generator unconditionally includes
# google/protobuf/descriptor.upb.h, which is generated by libupb's
# bootstrap. Enabling libupb here only affects the host build; the
# target build turns it off because our firmware never touches upb.
set(protobuf_BUILD_LIBUPB        ON  CACHE BOOL "" FORCE)
set(protobuf_BUILD_PROTOC_BINARIES ON  CACHE BOOL "" FORCE)
set(protobuf_BUILD_PROTOBUF_BINARIES ON CACHE BOOL "" FORCE)
set(protobuf_DISABLE_RTTI        OFF CACHE BOOL "" FORCE)
set(protobuf_WITH_ZLIB           OFF CACHE BOOL "" FORCE)
set(protobuf_INSTALL             ON  CACHE BOOL "" FORCE)
set(protobuf_ABSL_PROVIDER       "module" CACHE STRING "" FORCE)
set(protobuf_FORCE_FETCH_DEPENDENCIES OFF CACHE BOOL "" FORCE)
set(protobuf_LOCAL_DEPENDENCIES_ONLY  ON  CACHE BOOL "" FORCE)
add_subdirectory(${PROTOBUF_SRC} protobuf-build)
